--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.2",
     "react": "^16.8.0-alpha.0",
     "react-dom": "^16.8.0-alpha.0",
+    "react-pose": "^4.0.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "typeface-roboto": "0.0.54"
