--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
+    "jest-dom": "^3.0.0",
     "react": "^16.8.0-alpha.0",
     "react-dom": "^16.8.0-alpha.0",
     "react-pose": "^4.0.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-testing-library": "^5.4.4",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
